force-app/main/default/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Has_Opportunities__c</fullName>
        <description>A temporary field used solely for filtering the results in reports that are used for populating iSAMS import templates</description>
        <formula>OR(
   AND(
       RecordType.DeveloperName = &quot;Additional_Parent&quot;,
       Main_Parent_File__r.Opportunity_Count__c != 0
       ),
   Account.Opportunity_Count__c != 0
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Has Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Parent File</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Additional Parent Emails</relationshipLabel>
        <relationshipName>AdditionalParentEmails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Accommodation_Type__c</fullName>
        <label>Accommodation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apartment/Condominium</fullName>
                </value>
                <value>
                    <fullName>House in Gated Community</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Apartment_Condo_Name_Number__c</fullName>
        <description>Combines the apartment/condo number and name. Passed to the AddressLine1 of the relevant contact in Xero when invoices are sent.</description>
        <formula>Address_Apartment_Unit_Number__c &amp; 
IF(NOT(ISBLANK(Address_Apartment_Unit_Number__c)), &quot; &quot;,&quot;&quot;) &amp; Address_Apartment_Condominium_or_Communi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apartment/Condo Name &amp; Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Apartment_Condominium_or_Communi__c</fullName>
        <label>Apartment/Condominium or Community Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Apartment_Unit_Number__c</fullName>
        <label>Apartment/Unit Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_City__c</fullName>
        <label>City.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Country__c</fullName>
        <label>Country.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_House_Building_Number__c</fullName>
        <label>House/Building Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_State_Province__c</fullName>
        <label>State/Province.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Street_Name_Number__c</fullName>
        <description>Combines the street name and number in the order typical for the country in which the school is based. Passed to the AddressLine2 of the relevant contact in Xero when invoices are sent.</description>
        <formula>IF(
   OR(
      SchoolText__c = &quot;The British International School of Kuala Lumpur&quot;,
      SchoolText__c = &quot;The King&apos;s School Manila&quot;,
      SchoolText__c = &quot;The New York International School&quot;,
      SchoolText__c = &quot;The British School of Nanjing&quot;,
      SchoolText__c = &quot;The British School Yangon&quot;,
      SchoolText__c = &quot;The British Schools Foundation&quot;
      ),
   Address_House_Building_Number__c &amp; 
   IF(NOT(ISBLANK(Address_House_Building_Number__c)),&quot; &quot;,&quot;&quot;) &amp; 
   Address_Street_Name__c,
   Address_Street_Name__c &amp; 
   IF(NOT(ISBLANK(Address_House_Building_Number__c)),&quot;, &quot;,&quot;&quot;) &amp; 
   Address_House_Building_Number__c
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Name &amp; Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Street_Name__c</fullName>
        <label>Street Name</label>
        <length>130</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Position__c</fullName>
        <label>Admin Position</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Department__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Head of Administration</fullName>
                </value>
                <value>
                    <fullName>Head of Finance</fullName>
                </value>
                <value>
                    <fullName>Head of Admissions</fullName>
                </value>
                <value>
                    <fullName>PA Headmaster</fullName>
                </value>
                <value>
                    <fullName>HR Officer</fullName>
                </value>
                <value>
                    <fullName>Procurement Officer</fullName>
                </value>
                <value>
                    <fullName>Accounting Officer</fullName>
                </value>
                <value>
                    <fullName>Invoicing Officer</fullName>
                </value>
                <value>
                    <fullName>Admissions Officer</fullName>
                </value>
                <value>
                    <fullName>Marketing/Events Officer</fullName>
                </value>
                <value>
                    <fullName>Facilities Manager</fullName>
                </value>
                <value>
                    <fullName>Bus Coordinator</fullName>
                </value>
                <value>
                    <fullName>Head of IT</fullName>
                </value>
                <value>
                    <fullName>IT Assistant</fullName>
                </value>
                <value>
                    <fullName>Front Desk</fullName>
                </value>
                <value>
                    <fullName>General Administration</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admissions_File__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admissions File</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Students_Have_Leaving_Dates__c</fullName>
        <formula>OR(
   AND(
       ISBLANK(RecordType.DeveloperName), 
       Account.Students_Who_Have_Been_Enrolled__c &lt;= Account.Students_with_Leaving_Dates__c
       ),
   AND(
       NOT(ISBLANK(RecordType.DeveloperName)), 
       Main_Parent_File__r.Students_Who_Have_Been_Enrolled__c &lt;= Main_Parent_File__r.Students_with_Leaving_Dates__c
       )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Students Have Leaving Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_App_Login__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ticked by default for parents that are included in the initial online app form. Tick manually for contacts added later. A Kompanion user will only be created when an email address is present. Unchecking this box will deactivate an existing Kompanion user.</inlineHelpText>
        <label>Allow App Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alt_Parent_Calendar_View_Categorisation__c</fullName>
        <formula>IF(DATEVALUE(Alt_Parent_Last_Calendar_View__c) + 14 &gt; TODAY(), &quot;1. Less than 14 Days Since Last View&quot;, 

IF(DATEVALUE(Alt_Parent_Last_Calendar_View__c) + 30 &gt; TODAY(), &quot;2. 14-30 Days Since Last View&quot;, 

IF(NOT(ISBLANK(Alt_Parent_Last_Calendar_View__c)), &quot;3. More than 30 Days Since Last View&quot;, 

&quot;4. Never Viewed&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alt/Parent Calendar View Categorisation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Parent_Last_Attendance_View__c</fullName>
        <formula>IF(TEXT(Main_Parent_File__r.Primary_Contact__c) = &quot;Second Parent&quot;, Main_Parent_File__r.Attendance_Report_Accessed__pc, Main_Parent_File__r.Related_Contact_Record_P2__r.Attendance_Report_Accessed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alt/Parent Last Attendance View</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alt_Parent_Last_Calendar_View__c</fullName>
        <formula>IF(TEXT(Main_Parent_File__r.Primary_Contact__c) = &quot;Second Parent&quot;, Main_Parent_File__r.NewsEvents_Report_Accessed__pc, Main_Parent_File__r.Related_Contact_Record_P2__r.NewsEvents_Report_Accessed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alt/Parent Last Calendar View</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alt_Parent_Last_Contact_Details_View__c</fullName>
        <formula>IF(TEXT(Main_Parent_File__r.Primary_Contact__c) = &quot;Second Parent&quot;, Main_Parent_File__r.Portal_Contact_Page_Accessed__pc, Main_Parent_File__r.Related_Contact_Record_P2__r.Portal_Contact_Page_Accessed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alt/Parent Last Contact Details View</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alt_Parent_Last_Login_Categorisation__c</fullName>
        <formula>IF(DATEVALUE(Alt_Parent_Last_Login__c) + 14 &gt; TODAY(), &quot;1. Less than 14 Days Since Last Login&quot;, 

IF(DATEVALUE(Alt_Parent_Last_Login__c) + 30 &gt; TODAY(), &quot;2. 14-30 Days Since Last Login&quot;, 

IF(NOT(ISBLANK(Alt_Parent_Last_Login__c)), &quot;3. More than 30 Days Since Last Login&quot;, 

&quot;4. Never Logged In&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alt/Parent Last Login Categorisation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Parent_Last_Login__c</fullName>
        <formula>IF(TEXT(Main_Parent_File__r.Primary_Contact__c) = &quot;Second Parent&quot;, Main_Parent_File__r.User_Last_Login__pc, Main_Parent_File__r.Related_Contact_Record_P2__r.User_Last_Login__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alt/Parent Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alt_Parent_Last_Pastoral_View__c</fullName>
        <formula>IF(TEXT(Main_Parent_File__r.Primary_Contact__c) = &quot;Second Parent&quot;, Main_Parent_File__r.Pastoral_Report_Accessed__pc, Main_Parent_File__r.Related_Contact_Record_P2__r.Pastoral_Report_Accessed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alt/Parent Last Pastoral View</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alt_Parent_Last_Progress_View__c</fullName>
        <formula>IF(TEXT(Main_Parent_File__r.Primary_Contact__c) = &quot;Second Parent&quot;, Main_Parent_File__r.Assessment_Reports_Accessed__pc, Main_Parent_File__r.Related_Contact_Record_P2__r.Assessment_Reports_Accessed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alt/Parent Last Progress View</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alternate_Parent_Email__c</fullName>
        <formula>Main_Parent_File__r.Alternate_Contact_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Parent Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Parent_File__c</fullName>
        <formula>HYPERLINK(IF(TEXT(Main_Parent_File__r.Primary_Contact__c) = &apos;Second Parent&apos;, &quot;/&quot;&amp;Main_Parent_File__c, &quot;/&quot;&amp;Main_Parent_File__r.Related_Contact_Record_P2__c), Alternate_Parent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Parent_Has_Portal_User__c</fullName>
        <formula>OR( 

AND(TEXT(Main_Parent_File__r.Primary_Contact__c) = &quot;Second Parent&quot;, NOT(ISBLANK(Main_Parent_File__r.User__pc))), 

AND(TEXT(Main_Parent_File__r.Primary_Contact__c) = &quot;First Parent&quot;, NOT(ISBLANK(Main_Parent_File__r.Related_Contact_Record_P2__r.User__c))) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Parent Has Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Parent__c</fullName>
        <formula>IF(TEXT(Main_Parent_File__r.Primary_Contact__c)=&quot;&quot;, &quot;Not Defined&quot;, Main_Parent_File__r.Alternate_Contact_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone_Combined__c</fullName>
        <description>Combines (separated by a space) and cleans the mobile phone number of a contact. Used primarily for passing the number to School Kompanion.</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Contact_Alternate_Phone_Country_Code__c, &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+&quot;, &quot;&quot;), &quot;#&quot;, &quot;&quot;)

&amp; &quot; &quot; &amp;

SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Contact_Alternate_Phone__c, &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+&quot;, &quot;&quot;), &quot;#&quot;, &quot;&quot;)</formula>
        <label>Alternate Phone (Combined)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <formula>Main_Parent_File__r.Alternate_Contact_Phone__c</formula>
        <label>Alternate Phone.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Reports_Accessed__c</fullName>
        <label>Progress Tab Accessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attendance_Report_Accessed__c</fullName>
        <label>Attendance Tab Accessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auto_Registration_Error__c</fullName>
        <label>Auto Registration Error</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSG_Parent_Upper_Lower__c</fullName>
        <formula>IF( AND ( Year_2__c + Year_3__c + Year_4__c + Year_5__c + Year_6__c + Year_7__c + Year_8__c + Year_9__c + Year_10__c + Year_11__c + Year_12__c + Year_13__c &gt; 0, Pre_Nursery__c + Nursery__c + Reception__c + Year_1__c = 0), &quot;Upper&quot;, 

IF( AND ( Year_2__c + Year_3__c + Year_4__c + Year_5__c + Year_6__c + Year_7__c + Year_8__c + Year_9__c + Year_10__c + Year_11__c + Year_12__c + Year_13__c = 0, Pre_Nursery__c + Nursery__c + Reception__c + Year_1__c &gt; 0), &quot;Lower&quot;, 

IF( AND ( Year_2__c + Year_3__c + Year_4__c + Year_5__c + Year_6__c + Year_7__c + Year_8__c + Year_9__c + Year_10__c + Year_11__c + Year_12__c + Year_13__c &gt; 0, Pre_Nursery__c + Nursery__c + Reception__c + Year_1__c &gt; 0), &quot;Both&quot;, 

&quot;Error&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BSG Parent Upper/Lower</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSKL_Parent_Primary_Secondary__c</fullName>
        <formula>IF( AND ( Year_7__c + Year_8__c + Year_9__c + Year_10__c + Year_11__c + Year_12__c + Year_13__c &gt; 0, Pre_Nursery__c + Nursery__c + Reception__c + Year_1__c + Year_2__c + Year_3__c + Year_4__c + Year_5__c + Year_6__c = 0), &quot;Secondary&quot;, 

IF ( AND ( Year_7__c + Year_8__c + Year_9__c + Year_10__c + Year_11__c + Year_12__c + Year_13__c = 0, Pre_Nursery__c + Nursery__c + Reception__c + Year_1__c + Year_2__c + Year_3__c + Year_4__c + Year_5__c + Year_6__c &gt; 0), &quot;Primary&quot;, 

IF ( AND ( Year_7__c + Year_8__c + Year_9__c + Year_10__c + Year_11__c + Year_12__c + Year_13__c &gt; 0, Pre_Nursery__c + Nursery__c + Reception__c + Year_1__c + Year_2__c + Year_3__c + Year_4__c + Year_5__c + Year_6__c &gt; 0), &quot;Both&quot;, 

&quot;Error&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BSKL Parent Primary/Secondary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Parent_Upper_Lower__c</fullName>
        <formula>IF( AND ( Year_2__c + Year_3__c + Year_4__c + Year_5__c + Year_6__c + Year_7__c + Year_8__c + Year_9__c + Year_10__c + Year_11__c + Year_12__c + Year_13__c &gt; 0, PN1__c + Pre_Nursery__c + Nursery__c + Reception__c + Year_1__c = 0, RecordTypeId &lt;&gt; &quot;0126F000001hVzl&quot; ), &quot;Upper&quot;, 

IF( AND ( Year_2__c + Year_3__c + Year_4__c + Year_5__c + Year_6__c + Year_7__c + Year_8__c + Year_9__c + Year_10__c + Year_11__c + Year_12__c + Year_13__c = 0, PN1__c + Pre_Nursery__c + Nursery__c + Reception__c + Year_1__c &gt; 0, RecordTypeId &lt;&gt; &quot;0126F000001hVzl&quot; ), &quot;Lower&quot;, 

IF( AND ( Year_2__c + Year_3__c + Year_4__c + Year_5__c + Year_6__c + Year_7__c + Year_8__c + Year_9__c + Year_10__c + Year_11__c + Year_12__c + Year_13__c &gt; 0, PN1__c + Pre_Nursery__c + Nursery__c + Reception__c + Year_1__c &gt; 0, RecordTypeId &lt;&gt; &quot;0126F000001hVzl&quot; ), &quot;Both&quot;, 

&quot;Error&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BST Parent Upper/Lower</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_SMS_Alternate_First_Name__c</fullName>
        <formula>Main_Parent_File__r.Bulk_SMS_Alternate_Contact_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk SMS Alternate First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_SMS_Alternate_Last_Name__c</fullName>
        <formula>Main_Parent_File__r.Bulk_SMS_Alternate_Contact_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk SMS Alternate Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_SMS_Alternate_Number_Student__c</fullName>
        <formula>Main_Parent_File__r.Bulk_SMS_Alternate_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk SMS Alternate Number (Student)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_SMS_Primary_First_Name__c</fullName>
        <formula>Main_Parent_File__r.Primary_Contact_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk SMS Primary First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_SMS_Primary_Last_Name__c</fullName>
        <formula>Main_Parent_File__r.Primary_Contact_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk SMS Primary Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_SMS_Primary_Number_Student__c</fullName>
        <formula>Main_Parent_File__r.Bulk_SMS_Primary_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk SMS Primary Number (Student)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Route_SAF__c</fullName>
        <formula>TEXT(Admissions_File__r.Bus_Route__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bus Route</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Service__c</fullName>
        <formula>IF(Admissions_File__r.Bus_Service__c=0,&quot;NO&quot;,&quot;YES&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bus Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSchool__c</fullName>
        <formula>IF(Main_Parent_File__c = &quot;&quot;, Account.Company_School__c , Main_Parent_File__r.SchoolText__pc)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSchool</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Favorite_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>checked by system when logic a</inlineHelpText>
        <label>Chatter Favorite Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class_Dashboard_Filter__c</fullName>
        <formula>Class__c&amp;&quot;, &quot;&amp;House__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Dashboard Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Form_Tutor__c</fullName>
        <formula>Tutor_Group__r.Owner:User.FirstName &amp; &quot; &quot; &amp;Tutor_Group__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class/Form Tutor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <formula>Admissions_File__r.Class_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Dept. Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <formula>TEXT(Admissions_File__r.Class__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Alias__c</fullName>
        <formula>UPPER(LEFT(FirstName,1)&amp;LEFT(LastName,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Alternate_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Alternate_Phone_Country_CodePL__c</fullName>
        <label>Alternate Phone Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phone_Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Alternate_Phone_Country_Code__c</fullName>
        <label>Alternate Phone Country Code.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Alternate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Employer__c</fullName>
        <label>Employer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Employment_Sector__c</fullName>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID_18_Char__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID (18 Char)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile_Main_Ph_CountryC_Text__c</fullName>
        <label>Mobile/Main Phone Country Code Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile_Main_Phone_Country_CodePL__c</fullName>
        <label>Mobile/Main Phone Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phone_Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name_in_Local_Language__c</fullName>
        <label>Name in Local Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Nationality_Old__c</fullName>
        <inlineHelpText>180823 BEN: This field is no longer in use and pending deletion</inlineHelpText>
        <label>Nationality.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia And Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Nationality__c</fullName>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Nationalities</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Passport_Other_ID__c</fullName>
        <label>Passport/Other ID#</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Photo_Status_Temp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is used for targeted mass emails to get suitable photos for ID tags from contacts that are missing photos or whose photos are of a low quality</description>
        <label>Contact Photo Status (Temp)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Photo_URL__c</fullName>
        <formula>IF(
      !ISBLANK(Photo_Attachment_Id__c),
      &quot;/servlet/servlet.FileDownload?file=&quot;&amp;Photo_Attachment_Id__c,
      IF( Gender_Student__c == &quot;M&quot;, &quot;/resource/1444996516000/Contact_Photo_Boy&quot;, IF(Gender_Student__c == &quot;F&quot;, &quot;/resource/1444996517000/Contact_Photo_Girl&quot;, &quot;/resource/1444996517000/Contact_Photo_General&quot;))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Photo URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Place_of_Birth__c</fullName>
        <label>Place of Birth</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Portal_User_Creation_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal User Creation Error (Contact)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Relationship_Acronym__c</fullName>
        <description>Used in the bus reports - acronym is required so that contact information fits in the relevant cells on the bus printable sheets</description>
        <formula>CASE(
     TEXT(Contact_Relationship__c), 
     &quot;Father&quot;, &quot;FA&quot;,
     &quot;Mother&quot;, &quot;MO&quot;,
     &quot;Step Father&quot;, &quot;SF&quot;,
     &quot;Step Mother&quot;, &quot;SM&quot;,
     &quot;Other Legal Guardian&quot;, &quot;OLG&quot;,
     &quot;Grandparent&quot;, &quot;GP&quot;,
     &quot;Sibling&quot;, &quot;SI&quot;,
     &quot;Other Relative&quot;, &quot;OTR&quot;,
     &quot;Teacher/Tutor&quot;, &quot;TE&quot;,
     &quot;Personal Assistant&quot;, &quot;PA&quot;,
     &quot;Domestic Helper&quot;, &quot;DH&quot;,
     &quot;Driver&quot;, &quot;DR&quot;,
     &quot;OT&quot;
     )</formula>
        <label>Relationship Acronym</label>
        <type>Text</type>
    </fields>
</CustomObject>